# astrolabe

./: .env.example  .gitignore  CLAUDE.md  README.md  bun.lockb  package.json
.github/workflows/: check.yml
apps/api/: .dev.vars.example  Cargo.toml  package.json  wrangler.toml
apps/api/src/: auth.rs  error.rs  lib.rs  stripe.rs
apps/app/: .env.example  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.json
apps/app/app/: entry.server.tsx  root.tsx  routes.ts
apps/app/app/lib/: auth.tsx  stripe.ts
apps/app/app/routes/: index.tsx  pricing.tsx  sign-in.tsx  sign-up.tsx
apps/app/workers/: app.ts  env.d.ts
