[package]
name = "astrolabe-api"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Workers API"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
worker = { version = "0.7", features = ["d1"] }
js-sys = "0.3"
wasm-bindgen = "0.2.106"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[features]
default = []
console_panic_hook = ["console_error_panic_hook"]
